[gd_scene load_steps=4 format=3 uid="uid://xai7yveira5v"]

[ext_resource type="Script" path="res://squad_view.gd" id="1_j631x"]
[ext_resource type="PackedScene" uid="uid://bnrx1fdc3qpu" path="res://syntax_list.tscn" id="2_4v7mx"]
[ext_resource type="PackedScene" uid="uid://b13op42pqpmk5" path="res://picker.tscn" id="2_pv1oe"]

[node name="SquadView" type="Panel"]
custom_minimum_size = Vector2(1200, 700)
offset_right = 1200.0
offset_bottom = 700.0
script = ExtResource("1_j631x")

[node name="MemberView" type="GridContainer" parent="."]
layout_mode = 0
offset_left = 39.0
offset_top = 255.0
offset_right = 79.0
offset_bottom = 295.0
columns = 3

[node name="SelectSquad" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 40.0
offset_top = 18.0
offset_right = 290.0
offset_bottom = 50.0

[node name="SelectLeader" type="OptionButton" parent="."]
layout_mode = 0
offset_left = 299.0
offset_top = 67.0
offset_right = 544.0
offset_bottom = 99.0

[node name="Slots" type="HBoxContainer" parent="."]
layout_mode = 0
offset_left = 31.0
offset_top = 118.5
offset_right = 537.0
offset_bottom = 169.5

[node name="Aggression" type="CheckBox" parent="."]
layout_mode = 0
offset_left = 603.0
offset_top = 19.0
offset_right = 714.0
offset_bottom = 50.0
text = "Aggressive"

[node name="Commit" type="Button" parent="."]
layout_mode = 0
offset_left = 29.0
offset_top = 638.5
offset_right = 99.0
offset_bottom = 669.5
text = "Commit"

[node name="Label2" type="Label" parent="."]
layout_mode = 0
offset_left = 550.0
offset_top = 22.0
offset_right = 590.0
offset_bottom = 45.0
text = "0/4"

[node name="New" type="Button" parent="."]
layout_mode = 0
offset_left = 309.0
offset_top = 20.0
offset_right = 405.0
offset_bottom = 51.0
text = "New Squad"

[node name="Delete" type="Button" parent="."]
layout_mode = 0
offset_left = 413.0
offset_top = 20.0
offset_right = 524.0
offset_bottom = 51.0
text = "Delete Squad"

[node name="TextEdit" type="TextEdit" parent="."]
layout_mode = 0
offset_left = 32.0
offset_top = 62.0
offset_right = 267.0
offset_bottom = 106.0
text = "Squad Name"
placeholder_text = "Squad Name"

[node name="CriteriaPanel" parent="." instance=ExtResource("2_4v7mx")]
layout_mode = 0
offset_left = 320.0
offset_top = 136.0
offset_right = 749.0
offset_bottom = 627.0

[node name="Panel3" type="Panel" parent="."]
layout_mode = 0
offset_left = 19.0
offset_top = 136.0
offset_right = 313.0
offset_bottom = 625.0

[node name="Picker" parent="." instance=ExtResource("2_pv1oe")]
visible = false
layout_mode = 0
anchors_preset = 0
anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
offset_left = 424.0
offset_top = 132.0
offset_right = 643.0
offset_bottom = 536.0
grow_horizontal = 1
grow_vertical = 1

[node name="OrderPanel" parent="." instance=ExtResource("2_4v7mx")]
layout_mode = 0
offset_left = 758.0
offset_top = 136.0
offset_right = 1187.0
offset_bottom = 627.0

[node name="PriorityBox" type="SpinBox" parent="."]
layout_mode = 0
offset_left = 1066.0
offset_top = 36.0
offset_right = 1149.06
offset_bottom = 67.0

[node name="Label" type="Label" parent="."]
layout_mode = 0
offset_left = 974.0
offset_top = 43.0
offset_right = 1046.0
offset_bottom = 66.0
text = "PRIORITY"

[connection signal="item_selected" from="SelectSquad" to="." method="_on_select_squad_item_selected"]
[connection signal="pressed" from="Commit" to="." method="_on_commit_pressed"]
[connection signal="pressed" from="New" to="." method="_on_new_pressed"]
